--- a/cnnCTScan.ipynb
+++ b/cnnCTScan.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 1,
    "id": "3ae93f53",
    "metadata": {},
    "outputs": [
@@ -14,8 +14,15 @@
       "Requirement already satisfied: matplotlib in ./.venv/lib/python3.12/site-packages (3.10.3)\n",
       "Requirement already satisfied: numpy in ./.venv/lib/python3.12/site-packages (2.1.3)\n",
       "Requirement already satisfied: scipy in ./.venv/lib/python3.12/site-packages (1.15.3)\n",
-      "Collecting scikit-learn\n",
-      "  Downloading scikit_learn-1.7.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (17 kB)\n",
+      "Requirement already satisfied: scikit-learn in ./.venv/lib/python3.12/site-packages (1.7.0)\n",
+      "Requirement already satisfied: fastapi in ./.venv/lib/python3.12/site-packages (0.115.13)\n",
+      "Requirement already satisfied: uvicorn in ./.venv/lib/python3.12/site-packages (0.34.3)\n",
+      "Collecting pyngrok\n",
+      "  Downloading pyngrok-7.2.11-py3-none-any.whl.metadata (9.4 kB)\n",
+      "Requirement already satisfied: jinja2 in ./.venv/lib/python3.12/site-packages (3.1.6)\n",
+      "Collecting python-multipart\n",
+      "  Downloading python_multipart-0.0.20-py3-none-any.whl.metadata (1.8 kB)\n",
+      "Requirement already satisfied: nest-asyncio in ./.venv/lib/python3.12/site-packages (1.6.0)\n",
       "Requirement already satisfied: absl-py>=1.0.0 in ./.venv/lib/python3.12/site-packages (from tensorflow) (2.3.0)\n",
       "Requirement already satisfied: astunparse>=1.6.0 in ./.venv/lib/python3.12/site-packages (from tensorflow) (1.6.3)\n",
       "Requirement already satisfied: flatbuffers>=24.3.25 in ./.venv/lib/python3.12/site-packages (from tensorflow) (25.2.10)\n",
@@ -50,32 +57,38 @@
       "Requirement already satisfied: pillow>=8 in ./.venv/lib/python3.12/site-packages (from matplotlib) (11.2.1)\n",
       "Requirement already satisfied: pyparsing>=2.3.1 in ./.venv/lib/python3.12/site-packages (from matplotlib) (3.2.3)\n",
       "Requirement already satisfied: python-dateutil>=2.7 in ./.venv/lib/python3.12/site-packages (from matplotlib) (2.9.0.post0)\n",
-      "Collecting joblib>=1.2.0 (from scikit-learn)\n",
-      "  Downloading joblib-1.5.1-py3-none-any.whl.metadata (5.6 kB)\n",
-      "Collecting threadpoolctl>=3.1.0 (from scikit-learn)\n",
-      "  Downloading threadpoolctl-3.6.0-py3-none-any.whl.metadata (13 kB)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in ./.venv/lib/python3.12/site-packages (from scikit-learn) (1.5.1)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in ./.venv/lib/python3.12/site-packages (from scikit-learn) (3.6.0)\n",
+      "Requirement already satisfied: starlette<0.47.0,>=0.40.0 in ./.venv/lib/python3.12/site-packages (from fastapi) (0.46.2)\n",
+      "Requirement already satisfied: pydantic!=1.8,!=1.8.1,!=2.0.0,!=2.0.1,!=2.1.0,<3.0.0,>=1.7.4 in ./.venv/lib/python3.12/site-packages (from fastapi) (2.11.7)\n",
+      "Requirement already satisfied: annotated-types>=0.6.0 in ./.venv/lib/python3.12/site-packages (from pydantic!=1.8,!=1.8.1,!=2.0.0,!=2.0.1,!=2.1.0,<3.0.0,>=1.7.4->fastapi) (0.7.0)\n",
+      "Requirement already satisfied: pydantic-core==2.33.2 in ./.venv/lib/python3.12/site-packages (from pydantic!=1.8,!=1.8.1,!=2.0.0,!=2.0.1,!=2.1.0,<3.0.0,>=1.7.4->fastapi) (2.33.2)\n",
+      "Requirement already satisfied: typing-inspection>=0.4.0 in ./.venv/lib/python3.12/site-packages (from pydantic!=1.8,!=1.8.1,!=2.0.0,!=2.0.1,!=2.1.0,<3.0.0,>=1.7.4->fastapi) (0.4.1)\n",
+      "Requirement already satisfied: anyio<5,>=3.6.2 in ./.venv/lib/python3.12/site-packages (from starlette<0.47.0,>=0.40.0->fastapi) (4.9.0)\n",
+      "Requirement already satisfied: sniffio>=1.1 in ./.venv/lib/python3.12/site-packages (from anyio<5,>=3.6.2->starlette<0.47.0,>=0.40.0->fastapi) (1.3.1)\n",
+      "Requirement already satisfied: click>=7.0 in ./.venv/lib/python3.12/site-packages (from uvicorn) (8.2.1)\n",
+      "Requirement already satisfied: h11>=0.8 in ./.venv/lib/python3.12/site-packages (from uvicorn) (0.16.0)\n",
+      "Requirement already satisfied: PyYAML>=5.1 in ./.venv/lib/python3.12/site-packages (from pyngrok) (6.0.2)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in ./.venv/lib/python3.12/site-packages (from jinja2) (3.0.2)\n",
       "Requirement already satisfied: wheel<1.0,>=0.23.0 in ./.venv/lib/python3.12/site-packages (from astunparse>=1.6.0->tensorflow) (0.45.1)\n",
       "Requirement already satisfied: rich in ./.venv/lib/python3.12/site-packages (from keras>=3.5.0->tensorflow) (14.0.0)\n",
       "Requirement already satisfied: namex in ./.venv/lib/python3.12/site-packages (from keras>=3.5.0->tensorflow) (0.1.0)\n",
       "Requirement already satisfied: optree in ./.venv/lib/python3.12/site-packages (from keras>=3.5.0->tensorflow) (0.16.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.1.1 in ./.venv/lib/python3.12/site-packages (from werkzeug>=1.0.1->tensorboard~=2.19.0->tensorflow) (3.0.2)\n",
       "Requirement already satisfied: markdown-it-py>=2.2.0 in ./.venv/lib/python3.12/site-packages (from rich->keras>=3.5.0->tensorflow) (3.0.0)\n",
       "Requirement already satisfied: pygments<3.0.0,>=2.13.0 in ./.venv/lib/python3.12/site-packages (from rich->keras>=3.5.0->tensorflow) (2.19.1)\n",
       "Requirement already satisfied: mdurl~=0.1 in ./.venv/lib/python3.12/site-packages (from markdown-it-py>=2.2.0->rich->keras>=3.5.0->tensorflow) (0.1.2)\n",
-      "Downloading scikit_learn-1.7.0-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (12.5 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m12.5/12.5 MB\u001b[0m \u001b[31m79.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading joblib-1.5.1-py3-none-any.whl (307 kB)\n",
-      "Downloading threadpoolctl-3.6.0-py3-none-any.whl (18 kB)\n",
-      "Installing collected packages: threadpoolctl, joblib, scikit-learn\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3/3\u001b[0m [scikit-learn][0m [scikit-learn]\n",
-      "\u001b[1A\u001b[2KSuccessfully installed joblib-1.5.1 scikit-learn-1.7.0 threadpoolctl-3.6.0\n",
+      "Downloading pyngrok-7.2.11-py3-none-any.whl (25 kB)\n",
+      "Downloading python_multipart-0.0.20-py3-none-any.whl (24 kB)\n",
+      "Installing collected packages: python-multipart, pyngrok\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2/2\u001b[0m [pyngrok]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed pyngrok-7.2.11 python-multipart-0.0.20\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "pip install tensorflow matplotlib numpy scipy scikit-learn\n"
+    "pip install tensorflow matplotlib numpy scipy scikit-learn fastapi uvicorn pyngrok jinja2 python-multipart nest-asyncio\n"
    ]
   },
   {
@@ -554,8 +567,164 @@
    "execution_count": null,
    "id": "bd6e8223",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-06-24 11:24:53.419481: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2025-06-24 11:24:53.420079: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-06-24 11:24:53.424247: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-06-24 11:24:53.432357: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:467] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
+      "E0000 00:00:1750764293.444934 2237579 cuda_dnn.cc:8579] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "E0000 00:00:1750764293.448667 2237579 cuda_blas.cc:1407] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "W0000 00:00:1750764293.459487 2237579 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1750764293.459498 2237579 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1750764293.459499 2237579 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "W0000 00:00:1750764293.459501 2237579 computation_placer.cc:177] computation placer already registered. Please check linkage and avoid linking the same target more than once.\n",
+      "2025-06-24 11:24:53.463359: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI AVX512_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-06-24 11:24:55.995575: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Public URL: NgrokTunnel: \"https://566c-138-2-94-79.ngrok-free.app\" -> \"http://localhost:8000\"\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     Started server process [2237579]\n",
+      "INFO:     Waiting for application startup.\n",
+      "INFO:     Application startup complete.\n",
+      "INFO:     Uvicorn running on http://0.0.0.0:8000 (Press CTRL+C to quit)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     103.144.227.141:0 - \"GET / HTTP/1.1\" 200 OK\n",
+      "INFO:     103.144.227.141:0 - \"GET /favicon.ico HTTP/1.1\" 404 Not Found\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:     103.144.227.141:0 - \"WebSocket /ws\" [accepted]\n",
+      "INFO:     connection open\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 861ms/step\n",
+      "0.46892783\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 30ms/step\n",
+      "0.5724026\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 27ms/step\n",
+      "0.57639307\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 27ms/step\n",
+      "0.53266\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 28ms/step\n",
+      "0.50785726\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 27ms/step\n",
+      "0.45472756\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 27ms/step\n",
+      "0.34247464\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 27ms/step\n",
+      "0.44938564\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 27ms/step\n",
+      "0.5285778\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 28ms/step\n",
+      "0.42186487\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 27ms/step\n",
+      "0.35704282\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 85ms/step\n",
+      "0.3265701\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 117ms/step\n",
+      "0.37884295\n"
+     ]
+    }
+   ],
+   "source": [
+    "from fastapi import FastAPI, WebSocket, UploadFile, File, Request\n",
+    "from fastapi.responses import JSONResponse, StreamingResponse\n",
+    "from fastapi.middleware.cors import CORSMiddleware\n",
+    "from fastapi.templating import Jinja2Templates\n",
+    "from fastapi.responses import HTMLResponse\n",
+    "from tensorflow.keras.models import load_model\n",
+    "from tensorflow.keras.preprocessing.image import img_to_array\n",
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "import io\n",
+    "import base64\n",
+    "import nest_asyncio\n",
+    "from pyngrok import ngrok\n",
+    "import uvicorn\n",
+    "\n",
+    "app = FastAPI()\n",
+    "templates = Jinja2Templates(directory=\"templates\")\n",
+    "# Allow frontend to connect (adjust origins as needed)\n",
+    "app.add_middleware(\n",
+    "    CORSMiddleware,\n",
+    "    allow_origins=[\"*\"],\n",
+    "    allow_credentials=True,\n",
+    "    allow_methods=[\"*\"],\n",
+    "    allow_headers=[\"*\"],\n",
+    ")\n",
+    "\n",
+    "# Load model once\n",
+    "model = load_model(\"ctscan_model.h5\")\n",
+    "\n",
+    "def predict_image_from_bytes(image_bytes):\n",
+    "    img = Image.open(io.BytesIO(image_bytes)).convert(\"RGB\")\n",
+    "    img = img.resize((128, 128))\n",
+    "    img_array = img_to_array(img) / 255.0\n",
+    "    img_array = np.expand_dims(img_array, axis=0)\n",
+    "\n",
+    "    prediction = model.predict(img_array)[0][0]\n",
+    "    label = \"sakit\" if prediction > 0.5 else \"normal\"\n",
+    "    confidence = prediction if prediction > 0.5 else 1 - prediction\n",
+    "    print(prediction)\n",
+    "    return label, confidence\n",
+    "\n",
+    "\n",
+    "@app.get(\"/\", response_class=HTMLResponse)\n",
+    "async def read_root(request: Request):\n",
+    "    return templates.TemplateResponse(\"index.html\", {\"request\": request})\n",
+    "\n",
+    "@app.websocket(\"/ws\")\n",
+    "async def websocket_endpoint(websocket: WebSocket):\n",
+    "    await websocket.accept()\n",
+    "    while True:\n",
+    "        try:\n",
+    "            data = await websocket.receive_text()\n",
+    "            image_data = base64.b64decode(data.split(\",\")[1])  # Remove data:image/jpeg;base64,\n",
+    "            label, confidence = predict_image_from_bytes(image_data)\n",
+    "            await websocket.send_json({ \"label\": label, \"confidence\": round(float(confidence), 3)})\n",
+    "        except Exception as e:\n",
+    "            await websocket.send_json({\"error\": str(e)})\n",
+    "            break\n",
+    "\n",
+    "\n",
+    "\n",
+    "nest_asyncio.apply()\n",
+    "\n",
+    "ngrok.set_auth_token('2EC6KWc1czRKRhgSZTlaXW6lYyC_5yMQJHPA96tGF7bWnySDN')\n",
+    "public_url = ngrok.connect(8000)\n",
+    "print(\"Public URL:\", public_url)\n",
+    "\n",
+    "uvicorn.run(app, host=\"0.0.0.0\", port=8000)"
+   ]
   }
  ],
  "metadata": {
