--- a/cnnCTScan.ipynb
+++ b/cnnCTScan.ipynb
@@ -651,7 +651,101 @@
       "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 85ms/step\n",
       "0.3265701\n",
       "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 117ms/step\n",
-      "0.37884295\n"
+      "0.37884295\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 100ms/step\n",
+      "0.45401776\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 39ms/step\n",
+      "0.40511525\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 41ms/step\n",
+      "0.40616766\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 40ms/step\n",
+      "0.40600318\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 27ms/step\n",
+      "0.39738443\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 33ms/step\n",
+      "0.38570023\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 27ms/step\n",
+      "0.40142152\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 26ms/step\n",
+      "0.42024103\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 27ms/step\n",
+      "0.4581307\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 27ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:    Exception in ASGI application\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/tmp/ipykernel_2237579/1788206211.py\", line 52, in websocket_endpoint\n",
+      "    data = await websocket.receive_text()\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/starlette/websockets.py\", line 119, in receive_text\n",
+      "    self._raise_on_disconnect(message)\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/starlette/websockets.py\", line 113, in _raise_on_disconnect\n",
+      "    raise WebSocketDisconnect(message[\"code\"], message.get(\"reason\"))\n",
+      "starlette.websockets.WebSocketDisconnect: (1001, '')\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/uvicorn/protocols/websockets/websockets_impl.py\", line 244, in run_asgi\n",
+      "    result = await self.app(self.scope, self.asgi_receive, self.asgi_send)  # type: ignore[func-returns-value]\n",
+      "             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/uvicorn/middleware/proxy_headers.py\", line 60, in __call__\n",
+      "    return await self.app(scope, receive, send)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/fastapi/applications.py\", line 1054, in __call__\n",
+      "    await super().__call__(scope, receive, send)\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/starlette/applications.py\", line 112, in __call__\n",
+      "    await self.middleware_stack(scope, receive, send)\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/starlette/middleware/errors.py\", line 152, in __call__\n",
+      "    await self.app(scope, receive, send)\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/starlette/middleware/cors.py\", line 77, in __call__\n",
+      "    await self.app(scope, receive, send)\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/starlette/middleware/exceptions.py\", line 62, in __call__\n",
+      "    await wrap_app_handling_exceptions(self.app, conn)(scope, receive, send)\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/starlette/_exception_handler.py\", line 53, in wrapped_app\n",
+      "    raise exc\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/starlette/_exception_handler.py\", line 42, in wrapped_app\n",
+      "    await app(scope, receive, sender)\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/starlette/routing.py\", line 714, in __call__\n",
+      "    await self.middleware_stack(scope, receive, send)\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/starlette/routing.py\", line 734, in app\n",
+      "    await route.handle(scope, receive, send)\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/starlette/routing.py\", line 362, in handle\n",
+      "    await self.app(scope, receive, send)\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/starlette/routing.py\", line 95, in app\n",
+      "    await wrap_app_handling_exceptions(app, session)(scope, receive, send)\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/starlette/_exception_handler.py\", line 53, in wrapped_app\n",
+      "    raise exc\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/starlette/_exception_handler.py\", line 42, in wrapped_app\n",
+      "    await app(scope, receive, sender)\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/starlette/routing.py\", line 93, in app\n",
+      "    await func(session)\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/fastapi/routing.py\", line 383, in app\n",
+      "    await dependant.call(**solved_result.values)\n",
+      "  File \"/tmp/ipykernel_2237579/1788206211.py\", line 57, in websocket_endpoint\n",
+      "    await websocket.send_json({\"error\": str(e)})\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/starlette/websockets.py\", line 175, in send_json\n",
+      "    await self.send({\"type\": \"websocket.send\", \"text\": text})\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/starlette/websockets.py\", line 85, in send\n",
+      "    await self._send(message)\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/starlette/_exception_handler.py\", line 39, in sender\n",
+      "    await send(message)\n",
+      "  File \"/home/ubuntu/machine-learning/.venv/lib/python3.12/site-packages/uvicorn/protocols/websockets/websockets_impl.py\", line 360, in asgi_send\n",
+      "    raise RuntimeError(msg % message_type)\n",
+      "RuntimeError: Unexpected ASGI message 'websocket.send', after sending 'websocket.close' or response already completed.\n",
+      "INFO:     connection closed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.42567053\n"
      ]
     }
    ],
